# mod_auth_openid

./: .gitignore  Makefile.am  MoidConsumer.cpp  MoidConsumer.h  SessionManager.cpp  SessionManager.h  autogen.sh  configure.ac  http_helpers.cpp  http_helpers.h  memcache.cpp  memcache.h  mod_auth_openid.cpp  mod_auth_openid.h  moid_utils.cpp  moid_utils.h
